force-app/main/default/objects/Boost_Member_Note__c/Boost_Member_Note__c.object-meta.xml
<CustomObject>
    <label>Boost Member Note</label>
    <nameField>
        <displayFormat>BMN-{000000}</displayFormat>
        <label>Boost Member Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Boost Member Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>