force-app/main/default/objects/Boost_Member_Note__c/fields/Boost__c.field-meta.xml
<CustomField>
    <fullName>Boost__c</fullName>
    <label>Boost</label>
    <referenceTo>Boost__c</referenceTo>
    <relationshipLabel>Boost Member Notes</relationshipLabel>
    <relationshipName>Boost_Member_Notes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>