force-app/main/default/objects/Boost_Member_Note__c/fields/Free_Write_Note__c.field-meta.xml
<CustomField>
    <fullName>Free_Write_Note__c</fullName>
    <label>Free Write Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>