force-app/main/default/objects/Boost_Member_Note__c/fields/Note_Text__c.field-meta.xml
<CustomField>
    <fullName>Note_Text__c</fullName>
    <label>Note Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>