force-app/main/default/objects/Boost_Member_Note__c/fields/Note_Type__c.field-meta.xml
<CustomField>
    <fullName>Note_Type__c</fullName>
    <label>Note Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appeal submitted to payer</fullName>
            </value>
            <value>
                <fullName>Status request submitted to payer</fullName>
            </value>
            <value>
                <fullName>Appeal status request submitted to payer</fullName>
            </value>
            <value>
                <fullName>Status request submitted to adjuster</fullName>
            </value>
            <value>
                <fullName>Processing with payer</fullName>
            </value>
            <value>
                <fullName>See case and advise</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>