force-app/main/default/objects/Boost_Member_Note__c/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Boost Member Notes</relationshipLabel>
    <relationshipName>Boost_Member_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>